--- a/styles.css
+++ b/styles.css
@@ -47,10 +47,10 @@ h1, h2, h3, h4, h5, h6, p, a {
 }
 
 .profile {
+    margin-left: 940px;
     text-decoration: None;
     margin-top: auto;
     margin-bottom: auto;
-    margin-left: 1060px;
     font-size: 24px;
     color: #FAFAFA;
     font-weight: bold;
@@ -206,12 +206,12 @@ h1, h2, h3, h4, h5, h6, p, a {
     background-color: #37C5FF;
     text-shadow: 1px 1px 2px #000000;
     box-shadow: 2px 2px 4px #808080;
-    width: 140px;
+    width: 130px;
     height: 36px;
     border-radius: 4px;
     border-width: 1px;
     border-style: solid;
     border-color: #597980;
     padding: 5px 0;
-    margin: 0 20px 0 0;
+    margin: 0 0 0 20px;
 }
