--- a/styles.css
+++ b/styles.css
@@ -11,8 +11,9 @@
 
 body {
     font-family: 'Open Sans', sans-serif;
+    text-shadow: 1px 1px 1px #808080;
     padding: 0;
-    font-size: 18px;
+    font-size: 20px;
     background-color: #FAFAFA;
 }
 
@@ -38,6 +39,8 @@ h1, h2, h3, h4, h5, h6, p, a {
     padding: 0;
     margin: 0;
 }
+
+
 
 .title {
     color: #FAFAFA;
@@ -110,11 +113,23 @@ h1, h2, h3, h4, h5, h6, p, a {
 
 .deadlines {
     text-decoration: None;
-    text-align: center;
     font-weight: bold;
-    width: 200px;
     margin-left: auto;
     margin-right: auto;
+    text-align: center;
+    width: 290px;
+}
+
+.deadlines_title {
+    margin-left: auto;
+    margin-right: auto;
+    border-bottom: 6px solid var(--border_color);
+}
+
+.deadlines_list {
+    text-align: left;
+    width: 200px;
+    font-size: 16px;
 }
 
 .statistics_container {
@@ -132,20 +147,26 @@ h1, h2, h3, h4, h5, h6, p, a {
 
 .statistics {
     text-align: center;
-    width: 200px;
+    width: 290px;
     margin-left: auto;
     margin-right: auto;
 }
 
+.statistics_title {
+    margin-left: auto;
+    margin-right: auto;
+    border-bottom: 6px solid var(--border_color);
+}
+
 .statistics_img {
-    max-width: 180px;
+    max-width: 150px;
+    max-height: 150px;
 }
 
 .routines_container {
     height: 500px;
     width: 300px;
     margin: 0 0 20px 20px;
-    font-weight: bold;
     box-sizing: border-box;
     border-width: var(--border_width);
     border-style: solid;
@@ -156,10 +177,21 @@ h1, h2, h3, h4, h5, h6, p, a {
 }
 
 .routines {
+    font-weight: bold;
     text-align: center;
-    width: 200px;
+    width: 290px;
+}
+
+.routines_title{
     margin-left: auto;
     margin-right: auto;
+    border-bottom: 6px solid var(--border_color);
+}
+
+.routines_list {
+    text-align: left;
+    width: 200px;
+    font-size: 16px;
 }
 
 .quote_container {
@@ -187,12 +219,12 @@ h1, h2, h3, h4, h5, h6, p, a {
 }
 
 .calendar_img {
-    margin-left: 50px;
+    margin-left: 30px;
     max-width: 800px;
 }
 
 .actions {
-    margin-left: 50px;
+    margin-left: 30px;
     margin-bottom: 20px;
 }
 
